[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="TabContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Panel" parent="Connect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="LineEdit" parent="Connect/Join"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.4
margin_left = 24.0
margin_top = 3.8147e-06
margin_right = -24.0
margin_bottom = 7.62939e-06
align = 1
placeholder_text = "Server IP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinGame" type="Button" parent="Connect/Join"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 24.0
margin_right = -24.0
text = "Join Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Panel" parent="Connect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="Connect/Host"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = -40.0
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Control" parent="."]
anchor_top = 0.25
anchor_bottom = 0.75
margin_left = 24.0
margin_right = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="ItemList" parent="Players"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
window_title = "Error"
dialog_text = "Something went wrong"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tab_changed" from="Connect" to="." method="_on_tab_changed"]
[connection signal="pressed" from="Connect/Join/JoinGame" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Connect/Host/StartGame" to="." method="_on_start_pressed"]
